Fix code block overflow

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -22,6 +22,7 @@ pre {
   border-radius: 10px;
   padding: 24px;
   white-space: pre;
+  overflow-x: auto;
 }
 
 strong {
